<resources>
    <string name="app_name">Coleta Digital</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_formularios">Lista de</string>
    <string name="title_activity_cadastro_formulario">Novo</string>


    <string name="hint_nome_Formulario">Nome</string>
    <string name="hint_descricao_Formulario">Descrição</string>
    <string name="hint_criador_Formulario">Nome do Criador</string>
    <string name="btn_salvar">Salvar</string>

    <string name="err_msg_nome_Formulario">Insira um nome</string>
    <string name="err_msg_descricao_Formulario">Insira um descrição</string>
    <string name="err_msg_criador_Formulario">Insira um criador</string>

    <string name="err_msg_deveSerNumInteiroNaoNulo">Insira um número inteiro maior que 0</string>

    <string name="err_msg_NumFatoresInvalido">Insira 2 ou 3</string>


    <string name="err_msg_deveSerNumInteiro">Insira um número inteiro</string>


    <string name="err_msg_selecioneUmRadio">Escolha uma das opções</string>

    <string name="err_msg_opcaoInvalida">Opção Inválida</string>
    <string name="err_msg_nomeTratamento">Insira um nome para o Nível</string>
    <string name="err_msg_nomeFator">Insira um nome para o Fator</string>
    <string name="err_msg_nivelFator">Insira um número inteiro positivo.</string>
    <string name="err_msg_nomeNivelFator">Insira um nome para o Nivel do Fator</string>

    <string name="err_msg_nomeParcela">Insira um nome</string>
    <string name="err_msg_nomeNivelParcela">Insira um nome para o Nivel da</string>


    <string name="inicio_btnEXE">EXP</string>
    <string name="inicio_btnINV">INV</string>
    <string name="inicio_btnFITO">FITO</string>
    <string name="inicio_btnSOLOS">SOLOS</string>
    <string name="inicio_btnFOLHA">FOLHA</string>
    <string name="inicio_btnINS">INS</string>

    <string name="msg_naoExistemDados">Não existem dados para serem exibidos.</string>
    <string name="cadastro_formulario_tipo_Formulario">Delineamento</string>
    <string name="radio_dic">DIC</string>
    <string name="radio_dbc">DBC</string>
    <string name="radio_fat">FAT</string>
    <string name="radio_sub">SUB</string>
    <string name="title_activity_cadastro_formulario_Modelo">Novo</string>
    <string name="hint_quantidadeVariaveis_Modelo">Quantidade de Variáveis</string>
    <string name="hint_quantidadeReplicacoes_Modelo">Quantidade de Replica</string>
    <string name="hint_quantidadeRepeticoes_Modelo">Quantidade de Repetição</string>
    <string name="hint_quantidadeTratatmentos_Modelo">Quantidade de Níveis do Tratamento</string>
    <string name="title_activity_cadastro_tratamentos">Cadastro de Níveis do Tratamento</string>
    <string name="title_activity_cadastro_fatores">Cadastro de Fatores</string>
    <string name="title_activity_cadastro_nivelfatores">Cadastro de Níveis do Fator</string>
    <string name="hint_nomeTratamento">Nome do Nível </string>
    <string name="hint_nomeFator">Nome do fator </string>
    <string name="hint_nomeParcela">Nome da</string>
    <string name="hint_nomeNivelFator">Nome do nível </string>
    <string name="hint_niveisFator">Níveis</string>
    <string name="hint_nomeNivelParcela">Nome do nível </string>
    <string name="hint_niveisParcela">Níveis</string>

    <string name="title_activity_cadastro_parcelas">Cadastro de Parcelas</string>
    <string name="title_activity_cadastro_nivelparcelas">Cadastro de Níveis da</string>


    <string name="string_Tratamento">Tratamento </string>
    <string name="title_activity_cadastro_variaveis">Cadastro de Variáveis</string>
    <string name="hint_nomeVariavel">Nome da variável</string>

    <string name="spinnerTitulo_tipoTratamento">Tipo</string>
    <string name="dialog_close_button">Cancelar</string>
    <string name="err_msg_tipoTratamento">Escolha um Tipo</string>
    <string name="err_msg_nomeVariavel">Insira um nome</string>
    <string name="err_msg_tipoVariavel">Insira um tipo</string>
    <string name="err_msg_valorVariavel">Insira um valor</string>


    <string name="title_activity_cadastro_coleta">Cadastro de Coleta</string>
    <string name="hint_nomeColeta">Nome da Coleta</string>
    <string name="hint_descricaoColeta">Descrição da Coleta</string>
    <string name="err_msg_nomeColeta">Insira um nome</string>
    <string name="err_msg_descricaoColeta">Insira uma descrição</string>
    <string name="err_msg_preenchaTodosCampos">Todos os campos são necessários, por favor preencha-os!</string>
    <string name="err_msg_preenchaOuAnule">Preecha ou marque como NA!</string>


    <string-array name="spinnerArray_tipoTratamento">
        <item>Tipo</item>
        <item>Qual.</item>
        <item>Quant.</item>
    </string-array>

    <string-array name="spinnerArray_tipoFator">
        <item>Tipo</item>
        <item>Qual.</item>
        <item>Quant.</item>
    </string-array>

    <string-array name="spinnerArray_tipoParcela">
        <item>Tipo</item>
        <item>Qual.</item>
        <item>Quant.</item>
    </string-array>


    <string-array name="spinnerArray_tipoVariavel">
        <item>Tipo</item>
        <item>Disc.</item>
        <item>Cont.</item>
    </string-array>

    <string name="title_activity_coletar">Coletar</string>
    <string name="hint_valorDado">Valor da Variável</string>
    <string name="title_activity_coleta_dados">ColetaDados</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_coletar_dados">"Coletar Dados "</string>
    <string name="info_ColetaCompleta">Você completou a Coleta!</string>
    <string name="info_sairDaColeta">Sair da Coleta?</string>
    <string name="info_PreechaOuAnule">Preencha ou anule os campo com erro para prosseguir.</string>
    <string name="info_EmBreve">Em Breve!</string>
    <string name="tv_EscolhaTipo">Escolha o Tipo</string>
    <string name="info_Retornar">Você retrocedeu até o início da coleta. Para retornar a lista, toque no botão voltar.</string>
    <string name="info_SairApp">Para sair do App dê um toque duplo no botão voltar.</string>

    <string name="title_activity_teste">teste</string>
    <string name="title_activity_listar_formularios">Lista de</string>

    <string name="nav_titulo_coleta_de_dados">Coleta de Dados</string>
    <string name="nav_titulo_coletaNova">Nova Coleta</string>
    <string name="nav_titulo_coletaContinuar">Continuar</string>
    <string name="nav_titulo_coletaRemedir">Remedir</string>
    <string name="nav_titulo_coletaEditar">Editar</string>
    <string name="nav_titulo_coletaRemover">Remover</string>

    <string name="nav_titulo_formularioEditar">Editar</string>
    <string name="nav_titulo_formularioRemover">Remover</string>
    <string name="nav_tipo_form"></string>
    <string name="nav_header_titulo">Coleta Digital</string>
    <string name="nav_header_subtitulo">Engenharia Florestal</string>
    <string name="info_SelecioneUmaOpcao">Selecione o que deseja fazer</string>
    <string name="actionOK">OK</string>
    <string name="title_activity_listar_coletas">Coletas de </string>
    <string name="nav_titulo_coletaExportar">Exportar</string>
    <string name="nav_titulo_coletaListar">Listar Coletas</string>
    <string name="dialog_removerFormulario">Tem certeza que deseja remover este item?</string>
    <string name="dialog_remover">Remover</string>
    <string name="dialog_cancelar">Cancelar</string>
    <string name="dialog_acaoPermanente">Atenção! Esta ação não pode ser desfeita.</string>
    <string name="nav_titulo_formularioAddModelo">Adicionar Modelo</string>
    <string name="dialog_removerColeta">Tem certeza que deseja remover esta coleta?</string>
    <string name="info_ArquivoGerado">O Arquivo CSV foi exportado com sucesso!</string>
    <string name="dialog_modelo">Escolha o Modelo</string>
    <string name="dialog_mensagemListaFormularios">O que deseja fazer?</string>
    <string name="dialog_mensagemListaColetas">O que deseja fazer?</string>
    <string name="btn_na">NA</string>
    <string name="hint_quantidadeParcelas_Modelo">Quantidade de Parcelas</string>
    <string name="hint_quantidadeFatores_Modelo">Quantidade de Fatores</string>
    <string name="hint_quantidadeBlocos_Modelo">Quantidade de Blocos</string>
    <string name="nav_titulo_inicio"></string>
    <string name="info_CompartilharUsando">Compatilhar usando</string>
    <string name="dialog_compartilharArquivo">Deseja compartilhar o arquivo?</string>
    <string name="dialog_sim">Compartilhar</string>
    <string name="dialog_nao">Agora não</string>
    <string name="dialog_compartilharMensagem">O arquivo já foi salvo no seu smartfone, mas você pode enviá-lo para um amigo ou para sua núvem.</string>


    <string-array name="array_opcoes_formularios">
        <item>Listar Coletas</item>
        <item>Nova Coleta</item>
        <item>Remover</item>
    </string-array>

    <string-array name="array_opcoes_coletas">
        <item>Exportar</item>
        <item>Editar/Continuar</item>
        <item>Remover</item>
    </string-array>

</resources>