<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/itemDrawer_tipoFormulario"
        android:title="@string/modelo_de_coleta">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_formularioListarColetas"
                    android:icon="@drawable/ic_view_list_black_48dp"
                    android:title="@string/nav_titulo_coletaListar" />
                <item
                    android:id="@+id/nav_formularioNovaColeta"
                    android:icon="@drawable/ic_add_black_48dp"
                    android:title="@string/nav_titulo_coletaNova" />
                <item
                    android:id="@+id/nav_formularioAddModelo"
                    android:icon="@drawable/ic_note_add_black_48dp"
                    android:title="@string/nav_titulo_formularioAddModelo" />
                <item
                    android:id="@+id/nav_formularioEditar"
                    android:icon="@drawable/ic_build_black_48dp"
                    android:title="@string/nav_titulo_coletaEditar" />

                <item
                    android:id="@+id/nav_formularioRemover"
                    android:icon="@drawable/ic_delete_black_48dp"
                    android:title="@string/nav_titulo_coletaRemover" />
            </group>
        </menu>
    </item>

</menu>
