<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="me.adolfoquaranta.ef2.atividades.Inicio"
    tools:showIn="@layout/app_bar_inicio">

    <RelativeLayout
        android:id="@+id/rl_inicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/inicio_btnEXE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/inicio_btnEXE"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"/>

        <Button
            android:text="@string/inicio_btnINV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inicio_btnINV"
            android:layout_below="@+id/inicio_btnEXE"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"/>
        <Button
            android:text="@string/inicio_btnFITO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inicio_btnFITO"
            android:layout_below="@+id/inicio_btnINV"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"/>
        <Button
            android:text="@string/inicio_btnSOLOS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inicio_btnSOLOS"
            android:layout_below="@+id/inicio_btnFITO"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"/>
        <Button
            android:text="@string/inicio_btnFOLHA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inicio_btnFOLHA"
            android:layout_below="@+id/inicio_btnSOLOS"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"/>
        <Button
            android:text="@string/inicio_btnINS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inicio_btnINS"
            android:layout_below="@+id/inicio_btnFOLHA"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"/>
    </RelativeLayout>

</ScrollView>
