<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_cadastro_formulario_Modelo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="me.adolfoquaranta.coletadigital.atividades.CadastroModeloFormulario"
    tools:showIn="@layout/activity_cadastro_modelo_formulario">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_quantidadeTratatmentos_Modelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_quantidadeTratatmentos_Modelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_quantidadeTratatmentos_Modelo"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_quantidadeRepeticoes_Modelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_quantidadeRepeticoes_Modelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_quantidadeRepeticoes_Modelo"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_quantidadeReplicacoes_Modelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_quantidadeReplicacoes_Modelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_quantidadeReplicacoes_Modelo"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_quantidadeVariaveis_Modelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_quantidadeVariaveis_Modelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_quantidadeVariaveis_Modelo"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_salvar_Modelo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_salvar"
        android:textColor="@android:color/white"/>

</LinearLayout>


